--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: apivideolivestream_example
-description: Demonstrates how to use the apivideolivestream plugin.
+name: apivideo_live_stream_example
+description: Demonstrates how to use the apivideo_live_stream plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,9 +18,9 @@ dependencies:
       url: https://github.com/yako-dev/flutter-settings-ui.git
       ref: master
 
-  apivideolivestream:
+  apivideo_live_stream:
     # When depending on this package from a real application you should use:
-    #   apivideolivestream: ^x.y.z
+    #   apivideo_live_stream: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
