chore(*): clean Android packages

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'video.api.eco.flt.livestream.apivideolivestream'
+group 'video.api.flutter.livestream'
 version '1.0-SNAPSHOT'
 
 buildscript {
