--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="video.api.eco.flt.livestream.apivideolivestream">
+  package="video.api.flutter.livestream">
 </manifest>
