--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="video.api.eco.flt.livestream.apivideolivestream_example">
+    package="video.api.flutter.livestream.example">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
    <application
-        android:label="apivideolivestream_example"
+        android:label="LiveStream Example"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
