--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^4.4.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.7
+  json_serializable: ^6.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
