--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,10 +13,7 @@ dependencies:
     sdk: flutter
 
   image_picker: ^0.8.3+2
-  settings_ui:
-    git:
-      url: https://github.com/yako-dev/flutter-settings-ui.git
-      ref: master
+  settings_ui: ^2.0.1
 
   apivideo_live_stream:
     # When depending on this package from a real application you should use:
