--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,10 @@ group 'video.api.flutter.livestream'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext {
+        kotlin_version = '1.6.10'
+        streamPackVersion = '2.1.0'
+    }
     repositories {
         google()
         mavenCentral()
@@ -18,7 +21,6 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -26,7 +28,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -38,6 +40,9 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'video.api:android-live-stream:0.3.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation "io.github.thibaultbee:streampack:$streamPackVersion"
+    implementation "io.github.thibaultbee:streampack-extension-rtmp:$streamPackVersion"
 }
