--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: apivideo_live_stream
-description: An easy way to broadcast livestream on api.video platform as well as other RTMP platforms.
-version: 0.1.0
+description: Flutter RTMP live stream client.
+version: 1.0.0
 repository: https://github.com/apivideo/api.video-flutter-live-stream
 issue_tracker: https://github.com/apivideo/api.video-flutter-live-stream/issues
 homepage: https://api.video
