fix(ci): force release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Publishing
-        run: flutter pub publish
+        run: flutter pub publish -f
