--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,15 +6,15 @@ issue_tracker: https://github.com/apivideo/api.video-flutter-live-stream/issues
 homepage: https://api.video
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=2.17.1 <3.0.0"
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^4.6.0
   native_device_orientation: ^1.1.4
-
+  plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -34,9 +34,11 @@ flutter:
   plugin:
     platforms:
       android:
+        dartPluginClass: ApiVideoMobileLiveStream
         package: video.api.flutter.livestream
         pluginClass: ApiVideoLiveStreamPlugin
       ios:
+        dartPluginClass: ApiVideoMobileLiveStream
         pluginClass: ApiVideoLiveStreamPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
