--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   json_annotation: ^4.6.0
   native_device_orientation: ^1.1.4
   plugin_platform_interface: ^2.0.2
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_test:
