fix(example): add rules for R8 warnings

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -39,6 +39,8 @@ android {
 
     buildTypes {
         release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
         }
